force-app/main/default/objects/Warehouse__c/Warehouse__c.object-meta.xml
<CustomObject>
    <description>Warehouses for LeafMeAlone</description>
    <label>Warehouse</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warehouses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>