force-app/main/default/objects/Warehouse__c/fields/Sum_of_Contents__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Contents__c</fullName>
    <label>Sum of Contents</label>
    <summarizedField>Product_Inventory__c.Amount_Available__c</summarizedField>
    <summaryForeignKey>Product_Inventory__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>