force-app/main/default/objects/Warehouse__c/fields/Warehouse_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Capacity__c</fullName>
    <label>Warehouse Capacity</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>