force-app/main/default/objects/Warehouse__c/fields/Warehouse_Content_pots__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Content_pots__c</fullName>
    <formula>Warehouse_Capacity__c -  Sum_of_Contents__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Content (pots)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>