force-app/main/default/objects/Warehouse__c/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <label>Warehouse Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maysilo, Mandaluyong</fullName>
            </value>
            <value>
                <fullName>32nd Street, BGC, Taguig</fullName>
            </value>
            <value>
                <fullName>Citibank tower, Makati</fullName>
            </value>
            <value>
                <fullName>Metropoint Mall, Pasay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>