force-app/main/default/objects/Warehouse__c/fields/Warehouse_Manager__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Warehouses</relationshipLabel>
    <relationshipName>Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>